/*
 * $Id: ChangeLog,v 1.3645 2004/12/01 01:43:19 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-12-01 11:45 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! fixed centering of logical cells inside ::DispCell()

2004-12-01 14:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/regex.c
    + HB_FUNC( HB_ISREGEXSTRING ) - test string from PRG code
         to see if it is a compiled regex string

2004-12-01 13:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /include/thread.h
  * /source/vm/thread.c
    - change hb_threadSleep( int millisec, BOOL bIdleWaitNoCpu );
    - added support for WaitMessage() under Windows
         support for other OS still TODO
  * /include/hbapi.h
  * /contrib/libnf/dispc.c
  * /contrib/xwt/src/xwt_gtk/xwt_gtk.c
  * /contrib/xwt2/src/xwt_gtk/xwt_gtk.c
  * /source/rtl/inkey.c
    - change hb_idleState( BOOL bIndefinite )  - added parameter
  * /doc/en/idle.txt
  * /source/rtl/idle.c
    + HB_FUNC( HB_IDLESLEEPMSEC )  See /doc/en/idle.txt
    + HB_FUNC( HB_IDLEWAITNOCPU )  - allows use of WaitMessage() under Windows
                                     support for other OS still TODO
  * /doc/en/idle.txt
    + updated doc for new IDLE functions

2004-12-01 13:10 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /include/regex.h
  * /source/rtl/regex.c
  * /source/rdd/dbfcdx/dbfcdx1.c
    + macro hb_isregexstring( x )

  * /include/dbinfo.ch
    + DBRI_RAWRECORD, DBRI_RAWMEMOS, DBRI_RAWDATA
  * /source/rdd/dbf1,c
    - added new DBRI_RAW* options to hb_dbfRecInfo() ( use with DBRECORDINFO() )
      to return raw data from a DBF record

2004-11-30 22:00 UTC+0100 Ath <Ath at ath doge nl>
  * source/rtl/memoedit.prg
  * source/rtl/teditor.prg
    ! fixed for being Clipper-compatible in read/only mode